Fix alignment of elements when conversion animation is happening

--- a/docs/script/preloadAnimation.css
+++ b/docs/script/preloadAnimation.css
@@ -1,8 +1,8 @@
 .currently-animation,
 .future-temp-animation {
-    width: 20px;
-    height: 20px;
-    border: 3px solid black;
+    width: 1.25rem;
+    height: 1.25rem;
+    border: 0.19rem solid black;
     border-radius: 100%;
     animation: lds-ring 1s cubic-bezier(1, 1, 1, 1) infinite;
     border-color: black transparent transparent;
@@ -13,7 +13,9 @@
 }
 
 .future-temp-animation {
-    margin: 0 5rem 0 5rem;
+    margin: 0 auto;
+    /* avoid elements moving */
+    height: 2.25rem;
 }
 
 @keyframes lds-ring {
